--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
 node_modules/
+jspm_packages/
+
+dist/
+
+.npm
+
+.eslintcache
+
+*.tgz
+
+.yarn-integrity
