--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "webpack-react-smtp",
   "version": "1.0.0",
-  "description": "single page application for showing parts.\r Hypothetical job description whereby I create a reusable, responsive UI/webpage for showing a part's details.",
+  "description": "Building a single page application for showing part details",
   "main": "webpack.config.js",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-   "start": "webpack serve --config ./webpack.config.js --mode development"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --config ./webpack.config.js --mode development"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hicksey-makes/webpack-react-smtp.git"
   },
-  "keywords": [],
+  "keywords": [
+    "responsive",
+    "react",
+    "app",
+    "front-end"
+  ],
   "author": "Sam Hicks",
   "license": "MIT",
   "bugs": {
