--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
