start styles.css cleanup, add font via font.scss and import, remove FillForm component

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --config ./webpack.config.js --mode development"
+    "start": "webpack serve --config ./webpack.config.js --mode development",
+    "build": "webpack serve --config ./webpack.config.js --mode production"
   },
   "repository": {
     "type": "git",
