--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config ./webpack.config.js --mode development",
-    "build": "webpack serve --config ./webpack.config.js --mode production"
+    "build": "webpack --config ./webpack.config.js --mode production"
   },
   "repository": {
     "type": "git",
