--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Building a single page application for showing part details",
   "main": "webpack.config.js",
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.15.4"
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "react-dom": "^17.0.2",
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -17,8 +19,6 @@
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
     "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
@@ -31,6 +31,10 @@
     "start": "webpack serve --config ./webpack.config.js --mode development",
     "build": "webpack --config ./webpack.config.js --mode production"
   },
+  "sideEffects": [
+    "**/*.css",
+    "**/*.scss"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hicksey-makes/webpack-react-smtp.git"
