--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0"
+    "webpack-dev-server": "^4.4.0",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js --mode production"
+    "start": "webpack serve --open --config ./webpack.dev.js",
+    "build": "webpack --config ./webpack.prod.js"
   },
   "sideEffects": [
     "**/*.css",
