--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
+    "css-minimizer-webpack-plugin": "^3.1.4",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
